--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html itemscope itemtype="http://schema.org/WebPage" lang="en" class="no-js" data-theme-init>
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -29,7 +29,7 @@
     document.documentElement.setAttribute('data-bs-theme', theme);
   })();
 </script>
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow">
 
 
 <link rel="shortcut icon" href="/favicons/favicon.ico" >
@@ -45,23 +45,24 @@
 
 <title>About Docsy | faŋtrəntrəŋ-pages</title>
 <meta name="description" content="About Docsy Docsy is a pre-configured Hugo theme that provides the core features and behaviors needed to create a technical documentation site. Use Docsy to set up your documentation website, including an optional Blog section, and then spend your time focusing on authoring technical content. Depending on how you choose to configure Docsy and whether you use a hosting service that supports continuous builds, you can even just add your Markdown or HTML content file into a folder on your source repository, and then sit back while it automatically gets added to your site - complete with updated menus.">
-<meta property="og:url" content="http://localhost:1313/about/">
+<meta property="og:url" content="https://trtrf.github.io/about/">
   <meta property="og:site_name" content="faŋtrəntrəŋ-pages">
   <meta property="og:title" content="About Docsy">
   <meta property="og:description" content="About Docsy Docsy is a pre-configured Hugo theme that provides the core features and behaviors needed to create a technical documentation site. Use Docsy to set up your documentation website, including an optional Blog section, and then spend your time focusing on authoring technical content. Depending on how you choose to configure Docsy and whether you use a hosting service that supports continuous builds, you can even just add your Markdown or HTML content file into a folder on your source repository, and then sit back while it automatically gets added to your site - complete with updated menus.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="article">
-    <meta property="og:image" content="http://localhost:1313/about/featured-background.jpg">
+    <meta property="og:image" content="https://trtrf.github.io/about/featured-background.jpg">
 
   <meta itemprop="name" content="About Docsy">
   <meta itemprop="description" content="About Docsy Docsy is a pre-configured Hugo theme that provides the core features and behaviors needed to create a technical documentation site. Use Docsy to set up your documentation website, including an optional Blog section, and then spend your time focusing on authoring technical content. Depending on how you choose to configure Docsy and whether you use a hosting service that supports continuous builds, you can even just add your Markdown or HTML content file into a folder on your source repository, and then sit back while it automatically gets added to your site - complete with updated menus.">
   <meta itemprop="wordCount" content="1135">
-  <meta itemprop="image" content="http://localhost:1313/about/featured-background.jpg">
+  <meta itemprop="image" content="https://trtrf.github.io/about/featured-background.jpg">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="http://localhost:1313/about/featured-background.jpg">
+  <meta name="twitter:image" content="https://trtrf.github.io/about/featured-background.jpg">
   <meta name="twitter:title" content="About Docsy">
   <meta name="twitter:description" content="About Docsy Docsy is a pre-configured Hugo theme that provides the core features and behaviors needed to create a technical documentation site. Use Docsy to set up your documentation website, including an optional Blog section, and then spend your time focusing on authoring technical content. Depending on how you choose to configure Docsy and whether you use a hosting service that supports continuous builds, you can even just add your Markdown or HTML content file into a folder on your source repository, and then sit back while it automatically gets added to your site - complete with updated menus.">
-<link href="/scss/main.css" rel="stylesheet">
+<link rel="preload" href="/scss/main.min.3744332b33254e87e9a69b1862ad7325b5f448babae6ae4d22c36ede8d11697a.css" as="style" integrity="sha256-N0QzKzMlTofpppsYYq1zJbX0SLq65q5NIsNu3o0RaXo=" crossorigin="anonymous">
+<link href="/scss/main.min.3744332b33254e87e9a69b1862ad7325b5f448babae6ae4d22c36ede8d11697a.css" rel="stylesheet" integrity="sha256-N0QzKzMlTofpppsYYq1zJbX0SLq65q5NIsNu3o0RaXo=" crossorigin="anonymous">
 <script
   src="https://code.jquery.com/jquery-3.7.1.min.js"
   integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
@@ -371,8 +372,8 @@ window.markmap = {
 </script>
 <script src="https://cdn.jsdelivr.net/npm/markmap-autoloader"></script>
 <script src='/js/deflate.js'></script>
-<script src="/js/main.js"></script>
-<script defer src="/js/click-to-copy.js" crossorigin="anonymous"></script>
+<script src="/js/main.min.0d15864d0764e1ea6b705dd0acff1a5a5c9b4336cae6ca9d43a45cd1e167acdf.js" integrity="sha256-DRWGTQdk4eprcF3QrP8aWlybQzbK5sqdQ6Rc0eFnrN8=" crossorigin="anonymous"></script>
+<script defer src="/js/click-to-copy.min.73478a7d4807698aed7e355eb23f9890ca18fea3158604c8471746d046702bad.js" integrity="sha256-c0eKfUgHaYrtfjVesj&#43;YkMoY/qMVhgTIRxdG0EZwK60=" crossorigin="anonymous"></script>
 <script src='/js/tabpane-persist.js'></script>
 
   </body>
